--- a/views/nwc.html
+++ b/views/nwc.html
@@ -1,27 +1,25 @@
-<div class="container-fluid study-container">
-	<div class="row">
-		<div class="col-sm-12 nav">
-			<div class="text-right">
+<div class="study-container">
+	<div class="nav">
+		<div class="text-right">
 			<ul>
 				<li><a href="#works">Works</a></li>
 				<li><a href="#blog">Blog</a></li>
 				<li><a href="#/">About</a></li>
 			</ul>
 		</div>
-		</div>
 	</div>
 
 	<div class="row">
-		<div class="col-lg-6">
+		<div class="col-sm-6">
 			<div class="study-content">
 				<h1>Now We're Cookin'</h1>
 				<p class="pronounce">/ nou - (wir,wər) - ko͝okiNG / </p>
 				<p class="verb">Noun</p>
-				<!-- span class="description">1.</span-->
+				<span class="description">1.</span>
 				<p class="description">
 					My name's Antonio Lee and I am an aspiring designer & developer who enjoys creating new forms of interactive media. I have experience designing, researching, wireframing, prototyping and creating software applications ranging from websites, mobiles apps and video games.
 				</p>
-				<!-- span class="description">2.</span -->
+				<span class="description">2.</span>
 				<p class="description">
 					Besides designing and developing things, I like to do other things too! I love being active, anything music related, artsy stuff, and being surrounded by friends!
 				</p>
@@ -39,10 +37,9 @@
 				</div>
 			</div>
 		</div>
-
-		<div class="col-lg-6">
-			<img class="img-responsive" src="http://placehold.it/500x500">
+		<div class="col-sm-6">
+			<img class="img-responsive study-image" src="http://placehold.it/500x500">
 		</div>
 	</div>
-
+	
 </div>
