--- a/sass/_home.scss
+++ b/sass/_home.scss
@@ -16,7 +16,7 @@ font-family: 'Open Sans', sans-serif;
 // Home Page Container
 .home-container {
     position: relative;
-    min-height: 920px;
+    min-height: 700px;
     height: 100vh;
     width: 100vw;
     background-color: $dark-gray;
@@ -24,10 +24,11 @@ font-family: 'Open Sans', sans-serif;
 
 // Home Page Content
 .home-content {
-    min-width: 350px;
+    min-width: 300px;
     max-width: 700px;
     height: 50%; /* Set your own height: percents, ems, whatever! */
     width: 50%; /* Set your own width: percents, ems, whatever! */
+ // overflow: auto; /* Recommended in case content is larger than the container */
     margin: auto; /* Center the item vertically & horizontally */
     position: absolute; /* Break it out of the regular flow */
     top: 0; left: 0; bottom: 0; right: 0; /* Set the bounds in which to center it, relative to its parent/container */
@@ -132,6 +133,7 @@ font-family: 'Open Sans', sans-serif;
 @media (max-width: 768px) {
     // Home Page Content
     .home-content {
+        top: -20%;
 
     // Header Settings
         h1 {
