--- a/views/blog.html
+++ b/views/blog.html
@@ -1,5 +1,14 @@
 <div class="wrapper">
+	<div class="nav">
+		<div class="text-right">
+			<ul>
+				<li><a href="#works">Works</a></li>
+				<li><a href="#blog">Blog</a></li>
+				<li><a href="#/">About</a></li>
+			</ul>
+		</div>
+	</div>
 	<div class="red">
 		<p>hello</p>
-	</div>	
+	</div>
 </div>
