--- a/views/works.html
+++ b/views/works.html
@@ -1,6 +1,6 @@
 <div class="works-container">
 	<div class="nav">
-		<div class="text-right">
+		<div class="pull-right">
 			<ul>
 				<li><a href="#works">Works</a></li>
 				<li><a href="#blog">Blog</a></li>
