--- a/sass/_home.scss
+++ b/sass/_home.scss
@@ -1,18 +1,3 @@
-// Colors
-$dark-gray: #1A1A1A;
-$light-gray: #B1B1B1;
-$white: #E6E6E6;
-$green: #92FF6E;
-$blue: #32CFE0;
-$orange: #DD9833;
-
-/* Fonts
-font-family: 'Palanquin', sans-serif;
-font-family: 'Istok Web', sans-serif;
-font-family: 'Open Sans', sans-serif;
-*/
-
-
 // Home Page Container
 .home-container {
     position: relative;
@@ -20,12 +5,15 @@ font-family: 'Open Sans', sans-serif;
     height: 100vh;
     width: 100vw;
     background-color: $dark-gray;
+
+    
 }
 
 // Home Page Content
 .home-content {
     min-width: 300px;
     max-width: 700px;
+    min-height: 500px;
     height: 50%; /* Set your own height: percents, ems, whatever! */
     width: 50%; /* Set your own width: percents, ems, whatever! */
  // overflow: auto; /* Recommended in case content is larger than the container */
@@ -86,7 +74,6 @@ font-family: 'Open Sans', sans-serif;
 
     .skills{
         padding-top: 10px;
-        overflow:hidden;
 
         p {
           float: left;
@@ -102,22 +89,24 @@ font-family: 'Open Sans', sans-serif;
 
     }
 
-    .green {
-        border-color: $green;
+    .border { 
         border-width: 2px;
+        min-width: 50px;
+    }
+
+    .green {
+        @extend .border;
+        border-color: $green;
     }
 
     .blue {
+        @extend .border;
         border-color: $blue;
-        border-width: 2px;
-        min-width: 50px;
-
     }
 
     .orange {
+        @extend .border;
         border-color: $orange;
-        border-width: 2px;
-        min-width: 50px;
     }
 
 }
@@ -133,7 +122,6 @@ font-family: 'Open Sans', sans-serif;
 @media (max-width: 768px) {
     // Home Page Content
     .home-content {
-        top: -20%;
 
     // Header Settings
         h1 {
