--- a/sass/styles.scss
+++ b/sass/styles.scss
@@ -9,6 +9,22 @@
 }
 
 
+// Colors
+$dark-gray: #1A1A1A;
+$light-gray: #B1B1B1;
+$white: #E6E6E6;
+$green: #92FF6E;
+$blue: #32CFE0;
+$orange: #DD9833;
+$dark-pink: #C66F61;
+$nwc-yellow: #F7E4B6;
+
+@mixin hover-focus-active() {
+  &:hover,
+  &:focus,
+  &:active { @content }
+}
+
 
 // @import "compass/reset";
 @import "page-transitions";
@@ -17,7 +33,6 @@
 @import "case-study";
 @import "blog";
 
-
 // Page Settings
 .page {
 	position:absolute;
@@ -25,13 +40,13 @@
 
 // Page Specific Settings
 .page-home { background-color: #E7E7E7; width: 100vw}
-.page-contact { background-color: #66DF4C; height: 400vh; width: 100vw;}
-.page-about { background-color: #506AC0; height: 400vh; width: 100vw;}
-
+.page-contact { background-color: #66DF4C; }
+.page-about { background-color: #506AC0; }
+.page-nwc { background-color: #C66F61 }
 
 // Default Nav Bar
 .nav {
-    width: 100%;
+    width: 100vw;
     $fontsize: 1.75rem;
     padding: 25px 25px 0px;
 
