--- a/views/blog.html
+++ b/views/blog.html
@@ -1,6 +1,6 @@
-<div class="wrapper">
+<div class="blog-container">
 	<div class="nav">
-		<div class="text-right">
+		<div class="pull-right">
 			<ul>
 				<li><a href="#works">Works</a></li>
 				<li><a href="#blog">Blog</a></li>
@@ -8,7 +8,26 @@
 			</ul>
 		</div>
 	</div>
-	<div class="red">
-		<p>hello</p>
+	<div class="blog-content">
+		<h1>Blog Title</h1>
+		<p class="pronounce">/ blo-guhhhh postt-uhhhh /</p>
+		<p class="verb">Noun</p>
+		<span class="description">1.</span>
+		<p class="description">
+			Tonec at lorem aliquet, porttitor sem nec, efficitur ipsum. Fusce vel feugiat purus. Etiam tortor dolor, ultrices tincidunt vestibulum sed, lacinia sed libero. Phasellus a lorem augue. Suspendisse non ullamcorper turpis. Praesent dictum, lorem ut mattis cursus, mi est laoreet dui, at aliquet turpis massa nec orci. Curabitur semper eget purus sed mollis. Cras ut volutpat ex. Aliquam erat volutpat. Suspendisse volutpat eu odio quis vulputate. Nunc dignissim ante quam, et dictum urna porta in. Nullam nec dui dui. Duis sit amet justo vel erat luctus laoreet. Nullam condimentum tortor eget justo pharetra, non eleifend tortor suscipit. Etiam tincidunt fermentum ante in vulputate. Nulla consequat quis sem nec feugiat.
+		</p>
+		<span class="description">2.</span>
+		<p class="description">
+			Sed quis ultrices ex. Nam suscipit, eros in iaculis ultricies, nulla ex porta augue, a efficitur justo lacus vel justo. Vestibulum ornare nisl eu dui bibendum malesuada. Nullam tincidunt ultrices hendrerit. Phasellus sed convallis quam. Phasellus ac mi aliquam quam ultricies imperdiet sit amet eu dolor. Sed lorem tellus, vulputate at pulvinar a, semper id ante. Suspendisse magna lectus, commodo eu convallis sed, imperdiet ut neque. Proin nec scelerisque ex. Nulla a lacus imperdiet, volutpat ante ac, lobortis nisl. Fusce finibus lorem eget mi cursus, id accumsan enim interdum. Curabitur eget tristique nulla. Nam nec erat lacus. Pellentesque nec tempus velit, quis tempus neque. Quisque id tellus quis nulla bibendum gravida ut non nisl. Quisque auctor tortor ipsum, ac condimentum est dictum quis.
+		</p>
+		<p class="skills-header"> Skills </p>
+		<div class="skills">
+			<p class="green">&nbsp&nbsp WEAK &nbsp&nbsp</p>
+			<p class="orange">&nbsp&nbsp SAUCE &nbsp&nbsp</p>
+			<p class="blue">&nbsp&nbsp BRUH &nbsp&nbsp</p>
+
+
+		</div>
+		
 	</div>
 </div>
