--- a/views/home.html
+++ b/views/home.html
@@ -1,6 +1,6 @@
 <div class="home-container">
 	<div class="nav">
-		<div class="text-right">
+		<div class="pull-right">
 			<ul>
 				<li><a href="#works">Works</a></li>
 				<li><a href="#blog">Blog</a></li>
@@ -8,22 +8,19 @@
 			</ul>
 		</div>
 	</div>
-
 	<div class="home-content">
 		<h1>Antonio Lee</h1>
 		<p class="pronounce">/ (an, ən) - tō - nē - ō /  [ lē ]</p>
 		<p class="verb">Noun</p>
 		<span class="description">1.</span>
 		<p class="description">
-		My name's Antonio Lee and I am an aspiring designer & developer who enjoys creating new forms of interactive media. I have experience designing, researching, wireframing, prototyping and creating software applications ranging from websites, mobiles apps and video games. 
+			My name's Antonio Lee and I am an aspiring designer & developer who enjoys creating new forms of interactive media. I have experience designing, researching, wireframing, prototyping and creating software applications ranging from websites, mobiles apps and video games.
 		</p>
 		<span class="description">2.</span>
 		<p class="description">
-		Besides designing and developing things, I like to do other things too! I love being active, anything music related, artsy stuff, and being surrounded by friends!
+			Besides designing and developing things, I like to do other things too! I love being active, anything music related, artsy stuff, and being surrounded by friends!
 		</p>
-
 		<p class="skills-header"> Skills </p>
-
 		<div class="skills">
 			<p class="green">&nbsp&nbsp ILLUSTRATOR &nbsp&nbsp</p>
 			<p class="green">&nbsp&nbsp PHOTOSHOP &nbsp&nbsp</p>
@@ -35,7 +32,6 @@
 			<p class="orange">&nbsp&nbsp C# &nbsp&nbsp</p>
 			<p class="orange">&nbsp&nbsp JAVA &nbsp&nbsp</p>
 		</div>
+		
 	</div>
-
 </div>
-
