--- a/views/nwc.html
+++ b/views/nwc.html
@@ -1,6 +1,6 @@
-<div class="study-container">
+<div class="nwc-container">
 	<div class="nav">
-		<div class="text-right">
+		<div class="pull-right">
 			<ul>
 				<li><a href="#works">Works</a></li>
 				<li><a href="#blog">Blog</a></li>
@@ -10,35 +10,50 @@
 	</div>
 
 	<div class="row">
-		<div class="col-sm-6">
+		<div class="col-lg-8">
 			<div class="study-content">
 				<h1>Now We're Cookin'</h1>
 				<p class="pronounce">/ nou - (wir,wər) - ko͝okiNG / </p>
 				<p class="verb">Noun</p>
-				<span class="description">1.</span>
+
 				<p class="description">
-					My name's Antonio Lee and I am an aspiring designer & developer who enjoys creating new forms of interactive media. I have experience designing, researching, wireframing, prototyping and creating software applications ranging from websites, mobiles apps and video games.
+					Now We're Cooking is a mobile game for Android and iOS devices. The plot takes place in a cooking-reality television show, Now We're Cooking!, where three hot upcoming new chefs, Breakfast, Dinner and Dessert, have been invited to participate. However, when they arrived, the evil host announced his plan to trap them forever and the whole show changes into a survival challenge. The three chefs must work together to defeat the evil food he sends their way to survive!
 				</p>
-				<span class="description">2.</span>
+
 				<p class="description">
-					Besides designing and developing things, I like to do other things too! I love being active, anything music related, artsy stuff, and being surrounded by friends!
+					The goal of the game is to cook as much food as possible. At the start of each level the host will tell you the goal of each level. Once the level begins, the food that will move towards the chefs. You will be able innovate and create new dishes by swiping together different foods from the three different lanes.
+				</p>
+
+				<p class="description">
+					Swiping together different types of foods will also increase your combo multiplier, but be careful! If you make a bad dish your combo multiplier will be reset. You're gonna need to make some good combos in order to buy the necessary ingredients to create the dish of the century!
 				</p>
 				<p class="skills-header"> Skills </p>
 				<div class="skills">
-					<p class="green">&nbsp&nbsp ILLUSTRATOR &nbsp&nbsp</p>
-					<p class="green">&nbsp&nbsp PHOTOSHOP &nbsp&nbsp</p>
-					<p class="blue">&nbsp&nbsp HTML &nbsp&nbsp</p>
-					<p class="blue">&nbsp&nbsp CSS &nbsp&nbsp</p>
-					<p class="blue">&nbsp&nbsp JAVASCRIPT &nbsp&nbsp</p>
-					<p class="orange">&nbsp&nbsp PYTHON &nbsp&nbsp</p>
+					<p class="green">&nbsp&nbsp GAME DESIGN &nbsp&nbsp</p>
+					<p class="blue">&nbsp&nbsp SCRUM &nbsp&nbsp</p>
 					<p class="orange">&nbsp&nbsp LUA &nbsp&nbsp</p>
-					<p class="orange">&nbsp&nbsp C# &nbsp&nbsp</p>
-					<p class="orange">&nbsp&nbsp JAVA &nbsp&nbsp</p>
+					<p class="orange">&nbsp&nbsp CORONA SDK &nbsp&nbsp</p>
 				</div>
 			</div>
 		</div>
-		<div class="col-sm-6">
-			<img class="img-responsive study-image" src="http://placehold.it/500x500">
+
+		<div class="col-lg-4">
+			<img class="img-responsive" src="images/nwc/nwc-logo.png">
+		</div>
+	</div>
+
+	<div class="row">
+		<div class="col-sm-3">
+			<img class="img-responsive" src="images/nwc/nwc-logo.png">
+		</div>
+		<div class="col-sm-3">
+			<img class="img-responsive" src="images/nwc/nwc-logo.png">
+		</div>
+		<div class="col-sm-3">
+			<img class="img-responsive" src="images/nwc/nwc-logo.png">
+		</div>
+		<div class="col-sm-3">
+			<img class="img-responsive" src="images/nwc/nwc-logo.png">
 		</div>
 	</div>
 	
